--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Brett Garrick| Software Engineering</title>
+	<title>Caide Fallowfield| Software Engineering</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<link href="index.css" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
          </button>
-				<a class="navbar-brand text-center" href="index.html" style="margin-left: -1px;">Brett Garrick - Software Engineering</a>
+				<a class="navbar-brand text-center" href="index.html" style="margin-left: -1px;">Caide Fallowfield - Software Engineering</a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
@@ -43,7 +43,7 @@
 
 			
 
-					<h1>Brett Garrick</h1>
+					<h1>Caide Fallowfield</h1>
 
 					
 
@@ -58,8 +58,7 @@
 				<div class="col-lg-12">
 					<h4>My Links</h4>
 					<p>
-						<a href="https://www.linkedin.com/in/graysonljorr/" target="_blank">LinkedIn</a><br/>
-						<a href="https://github.com/Grayson-Orr" target="_blank">GitHub</a><br/>
+						
 					</p>
 				</div>
 			</div>
