--- a/technicalproficiency.html
+++ b/technicalproficiency.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Brett Garrick| Software Engineering</title>
+	<title>Caide Fallowfield| Software Engineering</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<link href="index.css" rel="stylesheet">
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
          </button>
-				<a class="navbar-brand text-center nav-center" href="index.html" style="margin-left: -1px;">Brett Garrick - Software Engineering</a>
+				<a class="navbar-brand text-center nav-center" href="index.html" style="margin-left: -1px;">Caide Fallowfield - Software Engineering</a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
