--- a/cv.html
+++ b/cv.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="project.html">CodeLingo</a></li>
+					<li><a href="project.html">Timeline</a></li>
 					<li><a href="professionalproficiency.html">Professional Proficiency</a></li>
 					<li><a href="technicalproficiency.html">Technical Proficiency</a></li>
 					<li><a href="technicalreport.html">Technical Report</a></li>
