--- a/technicalreport.html
+++ b/technicalreport.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="project.html">CodeLingo</a></li>
+					<li><a href="project.html">Timeline</a></li>
 					<li><a href="professionalproficiency.html">Professional Proficiency</a></li>
 					<li><a href="technicalproficiency.html">Technical Proficiency</a></li>
 					<li><a href="technicalreport.html">Technical Report</a></li>
@@ -43,6 +43,7 @@
 					
 					<h1>Techinical Report</h1>
 					
+					<object type="application/pdf" data="report.pdf" width="100%" height="800px"> </object>
 				</div>
 			</div>
 		</div>
