--- a/professionalproficiency.html
+++ b/professionalproficiency.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="project.html">CodeLingo</a></li>
+					<li><a href="project.html">Timeline</a></li>
 					<li><a href="professionalproficiency.html">Professional Proficiency</a></li>
 					<li><a href="technicalproficiency.html">Technical Proficiency</a></li>
 					<li><a href="technicalreport.html">Technical Report</a></li>
@@ -48,8 +48,8 @@
 					<p>I attended a majority of meetings with my team</p>
 					
 					<p><b>How well did you communicate with others in your group or subgroup?</b><br>
-					&#x2605; &#x2605; &#x2605; &#x2605; &#x2605;<br>
-					<p></p>
+					&#x2605; &#x2605; &#x2605; &#x2605;<br>
+					<p>Usually me and my team communicated well</p>
  					
 					<p><b>How well did you document your work throughout the project?</b><br>
 					&#x2605; &#x2605; &#x2605;<br>
