--- a/technicalreport.html
+++ b/technicalreport.html
@@ -42,8 +42,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 centered">
-					<h1>Curriculum Vitae</h1><br><br>
-					<object type="application/pdf" data="CV.pdf" width="100%" height="800px"> </object>
+					<h1>Technical Report</h1><br><br>
+					<object type="application/pdf" data="report.pdf" width="100%" height="800px"> </object>
 				</div>
 			</div>
 		</div>
