--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 			
 
-					<h1>Caide Fallowfield Software Engineering Portfilio </h1>
+					<h1>Caide Fallowfield Software Engineering Portfolio </h1>
 
 					
 
